<resources>
    <string name="app_name">信用商圈</string>
    <string name="userName"></string>
    <string name="passWord"></string>
    <string name="downloadKey"></string>
    <string name="endTitmNoStartTime">结束时间不能小于起始时间</string>
    <string name="startTimeEndTitmNo">起始时间不能大于结束时间</string>
    <string name="no_login">您还未登录</string>
    <string name="ipt_name">请输入用户名</string>
    <string name="ipt_psd">请输入密码</string>
    <string name="ipt_checkcode">请输入验证码</string>
    <string name="remeber_psd">记住密码</string>
    <string name="down_key">下载密钥</string>
    <string name="login">登录</string>
    <string name="login_out">退出</string>
    <string name="get_code_again">重新获取</string>
    <string name="statistics">报表</string>
    <string name="msg">消息</string>
    <string name="manage">管理</string>
    <string name="operate_msg_title">操作信息</string>
    <string name="gathering_title">收款</string>
    <string name="pay_info">支付详情</string>
    <string name="scanner">扫一扫</string>
    <string name="first">首页</string>
    <string name="mine">我的</string>
    <string name="fund_auth">预授权</string>
    <string name="collection">已收款(元)</string>
    <string name="today_amount">今日交易金额</string>
    <string name="today_num">今日交易笔数</string>
    <string name="terminal_amount_2">交易金额</string>
    <string name="deal_amount_2">交易笔数</string>
    <string name="total_amount">总笔数(笔)</string>
    <string name="refund">退款(元)</string>
    <string name="account_statement">流水</string>
    <string name="all">全部</string>
    <string name="already_collection">已收款</string>
    <string name="agency_fund">待收款</string>
    <string name="pay_method">支付方式：</string>
    <string name="deal_time">交易时间：</string>
    <string name="deal_money">金额：</string>
    <string name="door_man">商家名称：</string>
    <string name="pay_state">支付状态：</string>
    <string name="pay_num">支付账号：</string>
    <string name="pay_type">支付类型：</string>
    <string name="pay_product">收款产品：</string>
    <string name="pay_organize">收单机构：</string>
    <string name="refund_status">退款状态：</string>
    <string name="refund_type">退款类型：</string>
    <string name="pay_logout">退款</string>
    <string name="refund_order">退款单</string>
    <string name="order_amount">原订单金额</string>
    <string name="refund_amount">退款金额</string>
    <string name="refund_amount2">退款金额：</string>
    <string name="refund_num">退款单号：</string>
    <string name="refund_date">退款日期：</string>
    <string name="input_refund_amount">请输入退款金额</string>
    <string name="refund_amount_not_zero">退款金额不能小于0.01元，请重新输入</string>
    <string name="refund_amount_too_much">退款金额不能大于原订单金额，请重新输入</string>
    <string name="must_have_mer_pwd">设置商户管理密码后，才可进行退款操作</string>
    <string name="i_know">知道了</string>
    <string name="go_setting">去设置</string>
    <string name="refund_fail">退款失败</string>
    <string name="refund_success">退款成功</string>
    <string name="failure_reason">失败原因：</string>
    <string name="need_to_make_a_phone_call">交易信息已超过一天，请联系开通联机退货进行退款（餐饮行业暂不支持联机退货）</string>
    <string name="deal_Was_over_thirty_days">交易信息已超过三十天，已无法退款</string>
    <string name="contact_now">马上联系</string>
    <string name="call_phone">呼叫</string>
    <string name="has_been_set">您已经完成该设置，不需要重复设置</string>
    <string name="click_set_pwd">点击设置管理密码</string>
    <string name="click_set_voice">点击设置语音播报</string>
    <string name="next">下一步</string>
    <string name="number">操作员号</string>
    <string name="deal_type">支付类型</string>
    <string name="start_time">起始时间</string>
    <string name="end_time">结束时间</string>
    <string name="choose">筛选</string>
    <string name="order_number">请输入订单号进行查询</string>
    <string name="scanner_faile">扫码失败</string>
    <string name="door">门    店：</string>
    <string name="order">商户号：</string>
    <string name="terminal">终端号：</string>
    <string name="Operator">操  作  员：</string>
    <string name="clearing_time">上次结算时间：</string>
    <string name="start_settle_time">结算开始时间：</string>
    <string name="end_settle_time">结算结束时间：</string>
    <string name="total_recepits">实收总额：</string>
    <string name="total_refund">退款总额：</string>
    <string name="total_deal">交易总额：</string>
    <string name="deal_with">结算</string>
    <string name="time">时间：</string>
    <string name="total">核销总额</string>
    <string name="download">下载</string>
    <string name="PleaseM_Code">请输入您的商户号：</string>
    <string name="ConfirmMerchantCode">请确认您的商户号</string>
    <string name="code_suc">密钥下载成功</string>
    <string name="ple_download">请先下载密钥</string>
    <string name="smart_sweep">智能扫码</string>
    <string name="weixin_pay">微信支付</string>
    <string name="card_pay">银联支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="alipay">支付宝</string>
    <string name="unpay">未支付</string>
    <string name="card">银联</string>
    <string name="baidu_pay">百度支付</string>
    <string name="scan_code">请顾客扫描二维码</string>
    <string name="payment_status">获取支付状态</string>
    <string name="inpt_money">请输入金额</string>
    <string name="inpt_wrong">大人，小人出错了,您可以尝试清空</string>
    <string name="count_0">收款金额必须大于0</string>
    <string name="count_money">请计算收款金额</string>
    <string name="freeze_money">请输入金额</string>
    <string name="gather_info">收款信息</string>
    <string name="gather_detail">收款详情</string>
    <string name="gather_money">收款金额：</string>
    <string name="weixinNotOk">请扫描微信支付收款码</string>
    <string name="alipayNotOk">请扫描支付宝收款码</string>
    <string name="unbindAlipay">使用预授权收款方式需要绑定收款人的支付宝账号。</string>
    <string name="msg_to_fund_auth">预授权收款方式只支持支付宝支付，请让消费者打开支付宝付款码。</string>
    <string name="hint">提示</string>
    <string name="inpt_msg">请先输入内容</string>
    <string name="no_psd">密码不能为空</string>
    <string name="no_verify_code">请输入验证码</string>
    <string name="no_user">用户名不能为空</string>
    <string name="once_again">再按一次退出程序</string>
    <string name="no_function">此功能暂未开放</string>
    <string name="no_order">暂未获取到订单</string>
    <string name="select_type">请选择支付类型</string>
    <string name="logout_psd">请输入退款密码</string>
    <string name="dismiss">取消</string>
    <string name="sure">确定</string>
    <string name="to_bind">前往绑定</string>
    <string name="title_bind_alipay">绑定支付宝账号</string>
    <string name="btn_to_fund_auth">开始收款</string>
    <string name="reject_update">本次更新包含了重要内容，取消更新将无法继续正常使用哦，是否继续操作？</string>
    <string name="msg_notice">消息通知</string>
    <string name="goods_manage">商品管理</string>
    <string name="store_manage">门店管理</string>
    <string name="member_manage">会员管理</string>
    <string name="qr_code">收款码</string>
    <string name="materials_mall">物料商城</string>
    <string name="background_agents">代理后台</string>
    <string name="merchant_loan">商户成长贷</string>
    <string name="ai_store">AI店铺</string>
    <string name="radar">雷达</string>
    <string name="client">客户</string>
    <string name="real_time_online_population">实时在线人数</string>
    <string name="potential_buyers">潜在购买人数</string>
    <string name="client_type">客户类型</string>
    <string name="client_tag">客户标签</string>
    <string name="fixcode_title">我的固定码</string>
    <string name="fixcode_door_name">门店：</string>
    <string name="fixcode_name">名字：</string>
    <string name="saoma_pay">扫一扫下面二维码图案，开始付款</string>
    <string name="fix_benefit">我的收益</string>
    <string name="fix_manager">门店管理</string>
    <string name="deal_order">交易单号:</string>
    <string name="settle_info">结算详情</string>
    <string name="deal_amount">交易笔数：</string>
    <string name="home_money">营业额(元)</string>
    <string name="home_total_money">实收总额(元)</string>
    <string name="home_gain">暂无实收</string>
    <string name="home_seven">七天实收(元)</string>
    <string name="home_operate">收营员：</string>
    <string name="net_wrong">网络连接失败</string>
    <string name="try_net_wrong">网络连接失败,请稍后再试</string>
    <string name="collect_time">收款时间</string>
    <string name="money">金额(元)</string>
    <string name="pay">支付方式</string>
    <string name="pay_more">一码多付</string>
    <string name="opt_time">时间</string>
    <string name="opt_th">事件</string>
    <string name="opt_man">操作员</string>
    <string name="news_notice">活动通知</string>
    <string name="news_product">新品上线通知</string>
    <string name="scanOk">收款成功</string>
    <string name="scanError">收款失败</string>
    <string name="acc_title">收款账号</string>
    <string name="acc_bind_info">绑定支付宝账号，开始使用预授权方式收款</string>
    <string name="acc_current_merchant">当前商户：</string>
    <string name="acc_hint_safe_code">请输入验证码</string>
    <string name="acc_hint_name">请输入支付宝的商家PID</string>
    <string name="acc_hint_alipay_no">请输入支付宝账号</string>
    <string name="acc_btn_safe_code">获取验证码</string>
    <string name="acc_btn_bind">绑定</string>
    <string name="acc_btn_update">修改</string>
    <string name="title_fund_auth_order">预授权订单</string>
    <string name="title_my_bankcard">我的银行卡</string>
    <string name="title_account">收款账号</string>
    <string name="bind_alipay_acc">绑定支付宝账号</string>
    <string name="tv_receiver">收款商家支付宝uid：</string>
    <string name="alipay_acc">支付宝账号：</string>
    <string name="bind_acc_info">绑定成功后预授权收款的金额将自动转入该账号，确认是否无误？</string>
    <string name="order_status">订单状态：</string>
    <string name="title_pre_settle">预授权收款结算</string>
    <string name="freeze_succ">预授权成功</string>
    <string name="title_merchant_pwd">商户管理密码</string>
    <string name="title_setting">设置</string>
    <string name="voice_notification">语音通报设置</string>
    <string name="voice_need_permissions">稳定的语音通报需要开启权限</string>
    <string name="permissions_one">1、允许“信用商圈”自启动</string>
    <string name="permissions_two">2、保护“信用商圈”后台运行</string>
    <string name="permissions_three">3、忽略电池优化</string>
    <string name="go_check">去检查</string>
    <string name="note_phone_setting">注：其他助手软件也可按照同样方法设置</string>
    <string name="voice_notification_only_succ">播报收款成功</string>
    <string name="voice_notification_all">播报收款金额</string>
    <string name="title_shop">店铺资料</string>
    <string name="dredge_product">开通产品</string>
    <string name="title_share">分享小程序</string>
    <string name="print_receipts">小票打印</string>
    <string name="single_copy">单联</string>
    <string name="double_copy">二联</string>
    <string name="three_copy">三联</string>
    <string name="sign_the_order">签购单</string>
    <string name="merchant_name">商户名称：</string>
    <string name="merchant_num">商户编号：</string>
    <string name="terminal_num">终端编号：</string>
    <string name="terminal_amount">交易金额：</string>
    <string name="terminal_date">交易日期：</string>
    <string name="associated_order">关联单号：</string>
    <string name="yuan">元</string>
    <string name="stores_num">门 店 号：</string>
    <string name="card_num">卡        号：</string>
    <string name="receive_special">收 单 行：</string>
    <string name="card_issuers">发 卡 行：</string>
    <string name="period_of_validity">有 效 期：</string>
    <string name="transaction_type">交易类型：</string>
    <string name="date_and_time">日期时间：</string>
    <string name="rmb">RMB </string>
    <string name="note">备注：</string>
    <string name="order_num">订单号：</string>
    <string name="goods_type">产品类型：</string>
    <string name="pay_service_support">PAY+ 服务支持：</string>
    <string name="merchant_copy">商户存根        MERCHANT COPY</string>
    <string name="customer_copy">持卡人存根        CUSTOMER COPY</string>
    <string name="customer_sign">持卡人签名</string>
    <string name="customer_confirm">本人确认以上交易，同意将其计入本卡账户</string>
    <string name="refuse_refund_remind">建议您与买家协商后，在确定时候确定拒绝退款。如您拒绝退款后，买家可修改退款申请协议重新发起退款，也可以直接发起维权申请，将会由信用商圈介入处理。</string>
    <string name="input_refuse_reason">请填写您的拒绝理由</string>
    <string name="refuse_apply">拒绝申请</string>
    <string name="wechat_friend">微信好友</string>
    <string name="promo_code">推广码</string>
    <string name="open_mini_pro_success">成功开通小程序电商门店</string>
    <string name="next_to_do">接下来，您可以：</string>
    <string name="manage_mini_pro_shop">管理小程序门店吸引顾客</string>
    <string name="upload_goods">马上上传商品开始赚钱</string>
    <string name="manage_now">立即管理</string>
    <string name="enter_now">立即进入</string>
    <string name="enter_ai_shop">进入AI店铺</string>
</resources>