<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f2"
    android:orientation="vertical">


    <include
        android:id="@+id/include_title"
        layout="@layout/include_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y150"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginTop="@dimen/y40"
        android:text="@string/PleaseM_Code"
        android:textColor="@color/color_6"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_mode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:layout_marginLeft="@dimen/x100"
        android:layout_marginRight="@dimen/x100"
        android:layout_marginTop="@dimen/x50"
        android:background="@drawable/border_gray_background_white"
        android:hint="@string/ConfirmMerchantCode"
        android:inputType="number"
        android:paddingLeft="@dimen/x50"
        android:singleLine="true"
        android:text="@string/downloadKey"
        android:textColor="@color/color_6"
        android:textColorHint="@color/color_6"
        android:textSize="14sp" />


    <Button
        android:id="@+id/btn_down"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:layout_marginLeft="@dimen/x80"
        android:layout_marginRight="@dimen/x80"
        android:layout_marginTop="@dimen/y220"
        android:background="@drawable/border_home_background_home"
        android:text="@string/download"
        android:textColor="@color/color_f"
        android:textSize="16sp" />

</LinearLayout>