<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5">

    <include
        android:id="@+id/include_title"
        layout="@layout/include_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y150" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/refuse_refund_remind"
        android:textColor="@color/color_9"
        android:textSize="@dimen/sp_12"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/color_ec"/>

    <EditText
        android:id="@+id/et_input_refuse_reason"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_160"
        android:gravity="top"
        android:padding="@dimen/dp_10"
        android:background="@color/color_f"
        android:hint="@string/input_refuse_reason"
        android:textColorHint="@color/color_9"
        android:textColor="@color/color_6"
        android:textSize="@dimen/sp_14"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/color_ec"/>

    <Button
        android:id="@+id/btn_refuse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@drawable/shape_btn_no_enable"
        android:text="@string/refuse_apply"
        android:textColor="@color/btn_text"
        android:textSize="@dimen/sp_16" />

</LinearLayout>