<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bind_alipay_acc"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/account_current_merchant"
        android:padding="17sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/bind_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/color_6"
            android:text="@string/tv_receiver"/>
        <TextView
            android:id="@+id/tv_bind_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/bind_name"
            android:textSize="16sp"
            android:textColor="@color/color_3"
            android:text=""/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/alipay_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/color_6"
            android:text="@string/alipay_acc"/>
        <TextView
            android:id="@+id/tv_alipay_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/color_3"
            android:layout_toRightOf="@+id/alipay_acc"
            android:text=""/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        android:textColor="@color/account_current_merchant"
        android:text="@string/bind_acc_info"/>
    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dp">-->
    <!--<TextView-->
        <!--android:id="@+id/tv_dialog_yes"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:background="#00000000"-->
        <!--android:textColor="@color/account_safe_code"-->
        <!--android:textSize="14sp"-->
        <!--android:text="确定"/>-->
    <!--<TextView-->
        <!--android:id="@+id/tv_dialog_no"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="#00000000"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:text="取消"-->
        <!--android:textSize="14sp"-->
        <!--android:textColor="@color/account_current_merchant"-->
        <!--android:layout_toLeftOf="@+id/tv_dialog_yes"/>-->
    <!--</RelativeLayout>-->

</LinearLayout>