<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_192"
    android:background="@color/color_f"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/ll_wechat_friend"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_52"
                android:layout_height="@dimen/dp_52"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wechat_friend"
                android:layout_marginTop="@dimen/dp_18"
                android:textColor="@color/color_6"
                android:textSize="@dimen/sp_15"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_promo_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_52"
                android:layout_height="@dimen/dp_52"
                android:src="@mipmap/promo_code"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promo_code"
                android:layout_marginTop="@dimen/dp_18"
                android:textColor="@color/color_6"
                android:textSize="@dimen/sp_15"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:text="@string/dismiss"
        android:textColor="@color/color_6"
        android:textSize="@dimen/sp_17"
        android:background="@drawable/border_black"/>
</LinearLayout>